# reporting-app/app/controllers/api/certifications_controller.rb
@@ -1,7 +1,7 @@
 # frozen_string_literal: true
 
 class Api::CertificationsController < ApiController
-  before_action :set_certification, only: %i[ show ]
+  before_action :set_certification, only: %i[ show outcome ]
 
   # @summary Retrieve a Certification record
   # @tags certifications
@@ -12,14 +12,31 @@ class Api::CertificationsController < ApiController
     render_data(Api::Certifications::Response.from_certification(@certification))
   end
 
+  # @summary Retrieve a Certification record with an outcome or a 202 without
+  # @tags certifications
+  #
+  # @response A Certification(200) [Reference:#/components/schemas/CertificationResponseBody]
+  # @response Accepted(202) []
+  # @response Not found.(404) [Reference:#/components/schemas/ErrorResponseBody]
+  def outcome
+    if @certification.outcome
+      render_data(Api::Certifications::Response.from_certification(@certification))
+    else
+      render json: {}, status: :accepted, location: outcome_api_certification_url(@certification)
+    end
+  end
+
   # @summary Create a Certification record
   # @tags certifications
+  #
+  # @parameter prefer(header) [String] Header to use when want async response - respond-async
   #
   # @request_body The Certification data. [Reference:#/components/schemas/CertificationCreateRequestBody]
   # @request_body_example Fully specified certification requirements [Reference:#/components/schemas/CertificationCreateRequestBody/examples/fully_specified_certification_requirements]
   # @request_body_example Without explicit months and due date [Reference:#/components/schemas/CertificationCreateRequestBody/examples/without_explicit_months_that_can_be_certified_and_due_date]
   # @request_body_example Certification type [Reference:#/components/schemas/CertificationCreateRequestBody/examples/certification_type]
   # @response Created Certification.(201) [Reference:#/components/schemas/CertificationResponseBody]
+  # @response Accepted(202) []
   # @response User error.(400) [Reference:#/components/schemas/ErrorResponseBody]
   # @response User error.(422) [Reference:#/components/schemas/ErrorResponseBody]
   def create
@@ -37,10 +54,14 @@ class Api::CertificationsController < ApiController
       service = Certifications::CreationService.new(certification)
       @certification = service.call
 
-      render_data(
-        Api::Certifications::Response.from_certification(@certification),
-        status: :created
-      )
+      if request.headers["prefer"] == "respond-async"
+        render json: {}, status: :accepted, location: outcome_api_certification_url(@certification)
+      else
+        render_data(
+          Api::Certifications::Response.from_certification(@certification),
+          status: :created
+        )
+      end
     rescue ActiveRecord::RecordInvalid => e
       render_errors(e.record)
     end
